# mosaic

./: .gitignore  Cargo.toml  README.md
src/: app.rs  command.rs  editor.rs  input.rs  main.rs  ui.rs
src/event/: event.rs
src/global/: commands.rs  mod.rs  shortcuts.rs
src/handler/: command_handler.rs  config_handler.rs  input_handler.rs  mod.rs  old_panel_handler.rs  panel_handler.rs  shortcut_handler.rs  state_handler.rs  syntax_handler.rs
src/input/: command.rs  event.rs  insert.rs  normal.rs
src/panel/: editor_panel.rs  mod.rs  panel.rs  traits.rs
src/panel/command/: command_panel.rs
src/panel/editor/: editor_logic.rs  editor_panel.rs  editor_shortcuts.rs  editor_syntax.rs  mod.rs
src/panel/new_editor/: editor.rs  editor_draw.rs  editor_event.rs  editor_shortcuts.rs  mod.rs
src/panel_builtin/text_editor/: text_editor.rs
src/plugin/: plugin.rs
src/plugin_builtin/: mod.rs
src/plugin_builtin/mos_editor/: editor_panel.rs  mod.rs  mos_editor.rs
src/plugin_builtin/text_editor/: editor_panel.rs  mod.rs  text_editor.rs
src/system/: lua_manager.rs  mod.rs  panel_registry.rs  plugin_registry.rs
src/ui/: highlight.rs
src/workspace/: layout.rs  mod.rs  workspace.rs
