[package]
name = "mos"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
ropey = "1.6"
#mlua = { version = "0.11.6", features = ["lua54"] }
uuid = { version = "1.20.0", features = ["v4"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }